[Mac] Adjustments to the Default State Touch Bar

- Modified the text on the search button
- Use Google Search icon when the default search provider is Google
- New Tab button moved to the back
- Active star color should be blue

BUG=694754, 694760, 694756, 694753

Review-Url: https://codereview.chromium.org/2711443003
Cr-Commit-Position: refs/heads/master@{#452874}

Former-commit-id: c73de4e7f56bfa4ece4ebb69086861ae40f17564